--- a/Client/src/app/modules/public/components/navigation/navigation.component.html
+++ b/Client/src/app/modules/public/components/navigation/navigation.component.html
@@ -1,3 +1,14 @@
+
+<div class="bg-[#111827] text-white py-1 lg:hidden">
+    <div class="mx-auto max-w-7xl flex justify-center items-center text-center">
+        <!-- Dashboard button -->
+        @if((_accountService.currentUser$ | async)){
+            <button type="button" routerLink="/admin"
+                class="py-1 px-5 me-2 text-md font-medium text-white focus:outline-none bg-transparent rounded-full border border-gray-200 hover:bg-white hover:text-indigo-700 focus:z-10 focus:ring-4 focus:ring-gray-200">Admin Dashboard</button>
+        }
+    </div>
+</div>
+
 <div class="bg-[#111827] text-white py-1 hidden lg:block">
     <div class="mx-auto max-w-7xl lg:px-8 flex justify-between items-center">
         <div class="flex">
@@ -11,6 +22,11 @@
             }
             }
         </div>
+        <!-- Dashboard button -->
+        @if((_accountService.currentUser$ | async)){
+                <button type="button" routerLink="/admin"
+                    class="py-1 px-5 me-2 text-sm font-medium text-white focus:outline-none bg-transparent rounded-full border border-gray-200 hover:bg-white hover:text-indigo-700 focus:z-10 focus:ring-4 focus:ring-gray-200">Admin Dashboard</button>
+            }
         <!-- search form -->
         <div>
             <form class="mr-2 border rounded-md bg-white">
