--- a/Client/src/app/modules/admin/components/navigation/navigation.component.html
+++ b/Client/src/app/modules/admin/components/navigation/navigation.component.html
@@ -1,11 +1,10 @@
-<nav class="fixed top-0 z-50 w-full bg-white">
+<nav class="fixed top-0 z-50 w-full bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700">
     <div class="px-3 py-3 lg:px-5 lg:pl-3">
         <div class="flex items-center justify-between">
             <div class="flex items-center justify-start rtl:justify-end">
                 <button data-drawer-target="logo-sidebar" data-drawer-toggle="logo-sidebar" aria-controls="logo-sidebar"
                     type="button"
-                    class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
-                    (click)="isToggle = !isToggle">
+                    class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
                     <span class="sr-only">Open sidebar</span>
                     <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
                         xmlns="http://www.w3.org/2000/svg">
@@ -14,47 +13,52 @@
                         </path>
                     </svg>
                 </button>
-                <a routerLink="/admin" class="flex ms-2 md:me-24">
-                    <img src="{{logo}}" class="h-8 me-3" alt="FlowBite Logo" />
-                    <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap ">ngCommerce</span>
+                <a href="https://flowbite.com" class="flex ms-2 md:me-24">
+                    <img src="../../../../../favicon.ico" class="h-8 me-3" alt="FlowBite Logo" />
+                    <span
+                        class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">ngCommerce</span>
                 </a>
             </div>
             <div class="flex items-center">
                 <div class="flex items-center ms-3">
                     <div>
                         <button type="button"
-                            class="flex text-sm bg-gray-800 rounded-full focus:ring-2 focus:ring-gray-300 "
+                            class="flex text-sm bg-gray-800 rounded-full focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
                             aria-expanded="false" data-dropdown-toggle="dropdown-user">
                             <span class="sr-only">Open user menu</span>
-                            <img class="w-10 h-10 rounded-full"
+                            <img class="w-8 h-8 rounded-full"
                                 src="https://flowbite.com/docs/images/people/profile-picture-5.jpg" alt="user photo">
                         </button>
                     </div>
-                    <div class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded shadow "
+                    <div class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded shadow dark:bg-gray-700 dark:divide-gray-600"
                         id="dropdown-user">
                         <div class="px-4 py-3" role="none">
-                            <p class="text-sm text-gray-900 " role="none">
+                            <p class="text-sm text-gray-900 dark:text-white" role="none">
                                 Neil Sims
                             </p>
-                            <p class="text-sm font-medium text-gray-900 truncate " role="none">
+                            <p class="text-sm font-medium text-gray-900 truncate dark:text-gray-300" role="none">
                                 neil.sims&commat;flowbite.com
                             </p>
                         </div>
                         <ul class="py-1" role="none">
                             <li>
-                                <a routerLink="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                                <a href="#"
+                                    class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
                                     role="menuitem">Dashboard</a>
                             </li>
                             <li>
-                                <a routerLink="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100  "
+                                <a href="#"
+                                    class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
                                     role="menuitem">Settings</a>
                             </li>
                             <li>
-                                <a routerLink="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100  "
+                                <a href="#"
+                                    class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
                                     role="menuitem">Earnings</a>
                             </li>
                             <li>
-                                <a routerLink="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100  "
+                                <a href="#"
+                                    class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
                                     role="menuitem">Sign out</a>
                             </li>
                         </ul>
@@ -66,133 +70,92 @@
 </nav>
 
 <aside id="logo-sidebar"
-    class="hidden lg:flex fixed top-0 left-0 z-40 w-64 h-screen pt-20 transition-transform -translate-x-full bg-white border-r border-gray-200 lg:translate-x-0 "
+    class="fixed top-0 left-0 z-40 w-64 h-screen pt-20 transition-transform -translate-x-full bg-white border-r border-gray-200 sm:translate-x-0 dark:bg-gray-800 dark:border-gray-700"
     aria-label="Sidebar">
-    <div class="h-full px-3 pb-4 overflow-y-auto bg-white w-64">
-        <div class="space-y-2 font-medium">
+    <div class="h-full px-3 pb-4 overflow-y-auto bg-white dark:bg-gray-800">
+        <ul class="space-y-2 font-medium">
             @for(menu of sideMenu; track menu){
-            @if(menu.subMenu){
-            <div class="-mx-3">
+            @if(menu.subMenu && menu.subMenu.length > 0){
+            <li>
                 <button type="button"
-                    class="flex w-full items-center justify-between rounded-lg py-2 pr-3.5 text-base font-medium leading-7 text-gray-900 hover:bg-gray-100 hover:text-indigo-600"
-                    aria-controls="disclosure-1" aria-expanded="false" (click)="toggleSubMenu(menu)">
-
-                    <div class="flex items-center justify-start">
-                        <div class="w-10">
-                            <fa-icon [icon]="menu.icon" class="text-gray-600 hover:text-indigo-600"></fa-icon>
-                        </div>
-                        <div class="ml-2">{{menu.title}}</div>
+                    class="flex items-center justify-between w-full pl-0 p-2 text-base text-gray-900 transition duration-75 rounded-lg group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
+                    [attr.aria-controls]="'dropdown-'+menu.id" [attr.data-collapse-toggle]="'dropdown-' + menu.id">
+                    <div class="flex items-center">
+                        <fa-icon [icon]="menu.icon" class=" w-10 text-gray-600"></fa-icon>
+                        <span class="flex-1 ms-3 text-left rtl:text-right whitespace-nowrap">{{menu.title}}</span>
                     </div>
-
-                    <svg class="h-5 w-5 flex-none text-gray-400" viewBox="0 0 20 20" fill="currentColor"
-                        aria-hidden="true" [ngClass]="{'rotate-180': menu.isToggle, '': !menu.isToggle}">
-                        <path fill-rule="evenodd"
-                            d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z"
-                            clip-rule="evenodd" />
+                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 10 6">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="m1 1 4 4 4-4" />
                     </svg>
-
                 </button>
-                <!-- 'Product' sub-menu, show/hide based on menu state. -->
-                <div class="mt-2 space-y-2" id="disclosure-1" [style]="(menu.isToggle) ? '' : 'display:none;'">
+                <ul id="dropdown-{{menu.id}}" class="hidden py-2 space-y-2">
                     @for(subMenu of menu.subMenu; track subMenu){
-                    <a routerLink={{subMenu.route}} routerLinkActive="bg-gray-100 text-indigo-600"
-                        class="block rounded-lg py-2 pl-6 pr-3 text-sm font-normal leading-7 text-gray-700 hover:bg-gray-100 hover:text-indigo-600">
+                    @if(subMenu.subMenu && subMenu.subMenu.length > 0){
+                    <li>
+                        <button type="button"
+                            class="flex items-center w-full pl-6 p-2 text-base text-gray-900 transition duration-75 rounded-lg group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
+                            [attr.aria-controls]="'dropdown-'+subMenu.id"
+                            [attr.data-collapse-toggle]="'dropdown-' + subMenu.id">
+                            <fa-icon [icon]="subMenu.icon" class="text-gray-600 mr-2"></fa-icon>
+                            <span
+                                class="flex-1 ms-3 text-left rtl:text-right whitespace-nowrap">{{subMenu.title}}</span>
+                            <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                viewBox="0 0 10 6">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="m1 1 4 4 4-4" />
+                            </svg>
+                        </button>
+                        <ul id="dropdown-{{subMenu.id}}" class="hidden py-2 space-y-2">
+                            @for(list of subMenu.subMenu; track list){
+                            <li>
+                                <a type="button" routerLinkActive="bg-gray-100" #rla="routerLinkActive"
+                                    class="flex items-center justify-between w-full pl-8 p-2 text-base text-gray-900 transition duration-75 rounded-lg group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
+                                    routerLink="{{list.route}}" [class]="rla.isActive ?'text-indigo-600' : ''">
+                                    <div class="flex items-center text-center">
+                                        <fa-icon [icon]="list.icon" class=" w-10 text-gray-600" [class]="rla.isActive ?'text-indigo-600' : ''"></fa-icon>
+                                        <span
+                                            class="flex-1 ms-3 text-left rtl:text-right whitespace-nowrap">{{list.title}}</span>
+                                    </div>
+                                </a>
+                            </li>
 
-                        <fa-icon [icon]="subMenu.icon" class=" text-gray-600 w-10 h-10 mr-2"></fa-icon>
-                        {{subMenu.title}}
-                    </a>
+                            }
+                        </ul>
+                    </li>
                     }
-                </div>
-            </div>
+                    @else{
+                    <li>
+                        <a type="button" routerLinkActive="bg-gray-100" #rla="routerLinkActive"
+                            class="flex items-center justify-between w-full p-2 text-base text-gray-900 transition duration-75 rounded-lg group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
+                            routerLink="{{subMenu.route}}" [class]="rla.isActive ?'text-indigo-600' : ''">
+                            <div class="flex items-center text-center">
+                                <fa-icon [icon]="subMenu.icon" class=" w-10 text-gray-600" [class]="rla.isActive ?'text-indigo-600' : ''"></fa-icon>
+                                <span
+                                    class="flex-1 ms-3 text-left rtl:text-right whitespace-nowrap">{{subMenu.title}}</span>
+                            </div>
+                        </a>
+                    </li>
+                    }
+                    }
+                </ul>
+            </li>
             }
             @else {
-            <a routerLink={{menu.route}} routerLinkActive="bg-gray-100" [routerLinkActiveOptions]="{exact: !!menu.exact}" #rla="routerLinkActive"
-                class="group relative flex items-center -mx-3 hover:bg-gray-100">
-                <div class="flex h-11 w-11 flex-none items-center justify-center">
-
-                    <fa-icon [icon]="menu.icon" [class]="rla.isActive ?'text-indigo-600' : ''"
-                        class="h-6 w-6 text-gray-600 group-hover:text-indigo-600"></fa-icon>
-                </div>
-                <div class="flex-auto">
-                    <div class="block font-medium text-gray-900 group-hover:text-indigo-600 ml-1"
-                        [class]="rla.isActive ?'text-indigo-600' : ''">
-                        {{menu.title}}
-                    </div>
-                </div>
-            </a>
-            }
-            }
-        </div>
-    </div>
-</aside>
-
-<!-- Mobile sidebar -->
-<aside id="logo-sidebar" class="fixed top-0 left-0 w-64 h-screen lg:pt-20 transition-transform lg:z-40 z-50 lg:hidden"
-    [ngClass]="{'-translate-x-full': !isToggle, 'translate-x-0': isToggle}" aria-label="Sidebar">
-    <div class="h-full px-3 pb-4 overflow-y-auto bg-white">
-
-        <div class="flex justify-end mt-5">
-            <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700" (click)="isToggle = !isToggle">
-                <span class="sr-only">Close menu</span>
-                <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-                    aria-hidden="true">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-                </svg>
-            </button>
-        </div>
-        <div class="space-y-2 font-medium">
-            @for(menu of sideMenu; track menu){
-                @if(menu.subMenu){
-                <div class="-mx-3">
-                    <button type="button"
-                        class="flex w-full items-center justify-between rounded-lg py-2 pr-3.5 text-base font-medium leading-7 text-gray-900 hover:bg-gray-100 hover:text-indigo-600"
-                        aria-controls="disclosure-1" aria-expanded="false" (click)="toggleSubMenu(menu)">
-    
-                        <div class="flex items-center justify-start">
-                            <div class="w-10">
-                                <fa-icon [icon]="menu.icon" class="text-gray-600 hover:text-indigo-600"></fa-icon>
-                            </div>
-                            <div class="ml-2">{{menu.title}}</div>
-                        </div>
-    
-                        <svg class="h-5 w-5 flex-none text-gray-400" viewBox="0 0 20 20" fill="currentColor"
-                            aria-hidden="true" [ngClass]="{'rotate-180': menu.isToggle, '': !menu.isToggle}">
-                            <path fill-rule="evenodd"
-                                d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z"
-                                clip-rule="evenodd" />
-                        </svg>
-    
-                    </button>
-                    <!-- 'Product' sub-menu, show/hide based on menu state. -->
-                    <div class="mt-2 space-y-2" id="disclosure-1" [style]="(menu.isToggle) ? '' : 'display:none;'">
-                        @for(subMenu of menu.subMenu; track subMenu){
-                        <a routerLink={{subMenu.route}} routerLinkActive="bg-gray-100 text-indigo-600"
-                            class="block rounded-lg py-2 pl-6 pr-3 text-sm font-normal leading-7 text-gray-700 hover:bg-gray-100 hover:text-indigo-600">
-    
-                            <fa-icon [icon]="subMenu.icon" class=" text-gray-600 w-10 h-10 mr-2"></fa-icon>
-                            {{subMenu.title}}
-                        </a>
-                        }
-                    </div>
-                </div>
-                }
-                @else {
-                <a routerLink={{menu.route}} routerLinkActive="bg-gray-100" #rla="routerLinkActive"
-                    class="group relative flex items-center -mx-3 hover:bg-gray-100">
-                    <div class="flex h-11 w-11 flex-none items-center justify-center">
-    
-                        <fa-icon [icon]="menu.icon" [class]="rla.isActive ?'text-indigo-600' : ''"
-                            class="h-6 w-6 text-gray-600 group-hover:text-indigo-600"></fa-icon>
-                    </div>
-                    <div class="flex-auto">
-                        <div class="block font-medium text-gray-900 group-hover:text-indigo-600 ml-1"
-                            [class]="rla.isActive ?'text-indigo-600' : ''">
-                            {{menu.title}}
-                        </div>
+            <li>
+                <a type="button" routerLinkActive="bg-gray-100" #rla="routerLinkActive" [routerLinkActiveOptions]="{exact: !!menu.exact}"
+                    class="flex items-center justify-between w-full pl-0 p-2 text-base text-gray-900 transition duration-75 rounded-lg group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
+                    routerLink="{{menu.route}}" [class]="rla.isActive ?'text-indigo-600' : ''">
+                    <div class="flex items-center text-center">
+                        <fa-icon [icon]="menu.icon" class="w-10 text-gray-600" [class]="rla.isActive ?'text-indigo-600' : ''"></fa-icon>
+                        <span class="flex-1 ms-3 text-left rtl:text-right whitespace-nowrap">{{menu.title}}</span>
                     </div>
                 </a>
-                }
-                }
-        </div>
+            </li>
+            }
+            }
+
+        </ul>
     </div>
 </aside>
