--- a/Client/src/app/modules/admin/components/categories/create-category/create-category.component.html
+++ b/Client/src/app/modules/admin/components/categories/create-category/create-category.component.html
@@ -1,4 +1,4 @@
-<form #createCategoryForm="ngForm" (submit)="createCategory()">
+<form [formGroup]="createCategoryForm" (submit)="createCategory()">
     <div class="sm:flex justify-between items-center mb-3">
         <h3 class="font-medium text-2xl mb-3">Create category</h3>
 
@@ -43,8 +43,13 @@
                                         <li>
                                             <div class="flex p-2 rounded hover:bg-gray-100 ">
                                                 <div class="flex items-center h-5">
-                                                    <input id="parent-Category-{{item.id}}" name="parent-Category" type="radio" value="{{item.name}}"
-                                                        class="w-4 h-4 text-indigo-600 bg-gray-100 border-gray-300 focus:ring-indigo-500 "
+                                                    <input
+                                                     id="parent-Category-{{item.id}}"
+                                                     class="w-4 h-4 text-indigo-600 bg-gray-100 border-gray-300 focus:ring-indigo-500 "
+                                                     type="radio" 
+                                                     formControlName="parentCategory"
+                                                     value="{{item.id}}" 
+                                                     
                                                          />
                                                 </div>
                                                 <div class="ms-2 text-sm">
@@ -77,12 +82,16 @@
                     <div class="mb-3">
                         <div class="flex justify-between items-center">
                             <h4 class="font-medium tracking-wide text-[#071437]">Status</h4>
-                            <div class="size-3 bg-green-400 shadow-lg shadow-green-500 rounded-full"></div>
+                            <div
+                                [ngClass]="statusSignal ? 'bg-green-400 shadow-lg shadow-green-500' : 'bg-red-400 shadow-lg shadow-red-500'"
+                                class="size-3 rounded-full">
+                            </div>
+                            
                         </div>
 
                         <button id="categoryStatusButton" data-dropdown-toggle="categoryStatus"
                             class="text-gray-700 border mt-3 w-full focus:ring-4 focus:outline-none focus:ring-indigo-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex justify-between items-center"
-                            type="button">Published <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true"
+                            type="button">{{ statusSignal ? 'Published' : 'Un-Published' }} <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true"
                                 xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                     stroke-width="2" d="m1 1 4 4 4-4" />
@@ -94,60 +103,60 @@
                             class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-60 ">
                             <ul class="p-3 space-y-1 text-sm text-gray-700 "
                                 aria-labelledby="categoryStatusButton">
-                                <li>
-                                    <div class="flex p-2 rounded hover:bg-gray-100 ">
-                                        <div class="flex items-center h-5">
-                                            <input id="helper-radio-5" name="helper-radio" type="radio" value=""
-                                                class="w-4 h-4 text-indigo-600 bg-gray-100 border-gray-300 focus:ring-indigo-500 "
-                                                checked />
+                                @for(status of publishStatus; track status){
+                                    <li>
+                                        <div class="flex p-2 rounded hover:bg-gray-100 ">
+                                            <div class="flex items-center h-5">
+                                                <input 
+                                                id="{{status}}" 
+                                                class="w-4 h-4 text-indigo-600 bg-gray-100 border-gray-300 focus:ring-indigo-500"
+                                                type="radio" 
+                                                formControlName="publishStatus"
+                                                [value]="status"/>
+                                            </div>
+                                            <div class="ms-2 text-sm">
+                                                <label for="{{status}}" class="font-medium text-gray-900">
+                                                  <div>{{ status === 'true' ? 'Published' : 'Un-Published' }}</div>
+                                                  <p class="text-xs font-normal text-gray-500">
+                                                    {{ status === 'true' ? 'Category will be visible to customers.' : 'Category will be hidden from customers.' }}
+                                                  </p>
+                                                </label>
+                                              </div>
                                         </div>
-                                        <div class="ms-2 text-sm">
-                                            <label for="helper-radio-5" class="font-medium text-gray-900 ">
-                                                <div>Published</div>
-                                                <p id="helper-radio-text-5" class="text-xs font-normal text-gray-500 ">
-                                                    Category will be visible to customers.</p>
-                                            </label>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="flex p-2 rounded hover:bg-gray-100 ">
-                                        <div class="flex items-center h-5">
-                                            <input id="helper-radio-6" name="helper-radio" type="radio" value=""
-                                                class="w-4 h-4 text-indigo-600 bg-gray-100 border-gray-300 focus:ring-indigo-500 " />
-                                        </div>
-                                        <div class="ms-2 text-sm">
-                                            <label for="helper-radio-6" class="font-medium text-gray-900 ">
-                                                <div>Un-Published</div>
-                                                <p id="helper-radio-text-6" class="text-xs font-normal text-gray-500 ">
-                                                    Category will be hidden to customers.</p>
-                                            </label>
-                                        </div>
-                                    </div>
-                                </li>
+                                    </li>
+                                }
                             </ul>
                         </div>
 
                         <small class="text-gray-400 text-xs">Set the category status.</small>
                     </div>
 
-                    <!-- Public store -->
+                    <!-- Miscellaneous -->
                     <div class="mb-3">
-
                         <h4 class="font-medium tracking-wide text-[#071437] mb-2">Miscellaneous</h4>
-
                         <div class="md:flex items-center gap-2 lg:block">
                             <div class="flex items-center ps-4 border border-gray-200 rounded lg:w-full sm:w-1/2 my-2">
-                                <input id="bordered-checkbox-1" type="checkbox" value="" name="bordered-checkbox"
-                                    class="w-4 h-4 text-indigo-600 bg-gray-100 border-gray-300 rounded focus:ring-indigo-500 ">
+                                <input
+                                    id="bordered-checkbox-1" 
+                                    class="w-4 h-4 text-indigo-600 bg-gray-100 border-gray-300 rounded focus:ring-indigo-500 "
+                                    type="checkbox" 
+                                    value="" 
+                                    name=""
+                                    formControlName="showOnTopNavigation" >
+                                
                                 <label for="bordered-checkbox-1"
                                     class="w-full py-4 ms-2 text-sm font-medium text-gray-700 ">Add to
                                     navigation</label>
                             </div>
                             <div class="flex items-center ps-4 border border-gray-200 rounded lg:w-full sm:w-1/2 my-2">
-                                <input checked id="bordered-checkbox-2" type="checkbox" value=""
+                                <input
+                                    id="bordered-checkbox-2" 
+                                    class="w-4 h-4 text-indigo-600 bg-gray-100 border-gray-300 rounded focus:ring-indigo-500"
+                                    type="checkbox" 
+                                    value=""
                                     name="bordered-checkbox"
-                                    class="w-4 h-4 text-indigo-600 bg-gray-100 border-gray-300 rounded focus:ring-indigo-500 ">
+                                    formControlName="showOnHomepage" >
+
                                 <label for="bordered-checkbox-2"
                                     class="w-full py-4 ms-2 text-sm font-medium text-gray-700 ">Show
                                     on homepage</label>
@@ -167,6 +176,7 @@
             <div class="mb-7 bg-white rounded-md shadow-md p-5">
                 <h4 class="font-medium tracking-wide text-[#071437] mb-2">General</h4>
                 <app-general-form
+                 [generalForm]="createCategoryForm"
                  [nameLabel]="'Product Name'" 
                  [namePlaceholder]="'Enter product name'" 
                  [nameIsRequired]="true"
@@ -175,7 +185,6 @@
                  [descriptionPlaceholder]="'Enter product description'"
                  [descriptionIsRequired]="false"
                  [descriptionHelpfulText]="''"
-                 (generalFormValues)="onGeneralFormValues($event)"
                  ></app-general-form>
             </div>
 
@@ -202,7 +211,6 @@
 </form>
 
 <!-- Products in category -->
-
 <div class="mb-7 bg-white rounded-md shadow-md p-5">
     <h4 class="font-medium tracking-wide text-[#071437] mb-2">Products in category</h4>
 
@@ -334,41 +342,6 @@
             </tbody>
         </table>
     </div>
-
-    <nav class="flex items-center flex-column flex-wrap md:flex-row justify-between pt-4" aria-label="Table navigation">
-        <span class="text-sm font-normal text-gray-500  mb-4 md:mb-0 block w-full md:inline md:w-auto">Showing
-            <span class="font-semibold text-gray-900 ">1-10</span> of <span
-                class="font-semibold text-gray-900 ">1000</span></span>
-        <ul class="inline-flex -space-x-px rtl:space-x-reverse text-sm h-8">
-            <li>
-                <a href="#"
-                    class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 ">Previous</a>
-            </li>
-            <li>
-                <a href="#"
-                    class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 ">1</a>
-            </li>
-            <li>
-                <a href="#"
-                    class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 ">2</a>
-            </li>
-            <li>
-                <a href="#" aria-current="page"
-                    class="flex items-center justify-center px-3 h-8 text-indigo-600 border border-gray-300 bg-indigo-50 hover:bg-indigo-100 hover:text-indigo-700 ">3</a>
-            </li>
-            <li>
-                <a href="#"
-                    class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 ">4</a>
-            </li>
-            <li>
-                <a href="#"
-                    class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 ">5</a>
-            </li>
-            <li>
-                <a href="#"
-                    class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 ">Next</a>
-            </li>
-        </ul>
-    </nav>
-
 </div>
+
+<pre>Form Values: {{createCategoryForm.value | json}}</pre>
